--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,8 @@ input[type="text"] {
 input[type="text"]:focus {
     border-color: #4195fc;
 }
+button {
+    border-radius: 5px;
+    padding: 5px 10px;
+}
+
