--- a/styles.css
+++ b/styles.css
@@ -44,11 +44,11 @@ button {
 }
 
 .complete-button.not-completed {
-    background-color: #edda6d;
+    background-color: #ebe34d;
 }
 
 .complete-button.completed {
-    background-color: #42f548;
+    background-color: #22d463;
 }
 
 h1 {
