--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ button {
 }
 
 .complete-button.not-completed {
-    background-color: #ebe34d;
+    background-color: #f0d23e;
 }
 
 .complete-button.completed {
