--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,8 @@ button {
 h1 {
     font-size: 3em; /* Increase the font size */
     text-align: center; /* Center the text */
+     margin-top: 20px; /* Adjust this value to change the space above the header */
+
 }
 
 .delete-button {
