--- a/styles.css
+++ b/styles.css
@@ -61,3 +61,15 @@ h1 {
 .delete-button {
     background-color: #f03e3e;
 }
+
+h1 {
+    font-size: 3em;
+    text-align: center;
+    margin-top: 10px; /* Adjust this value to move "Task List" higher up */
+    margin-bottom: 10px; /* Add this property to reduce the space below the header */
+}
+
+.nav-button {
+    margin-top: 30px; /* Adjust this value to move the "Go to Dashboard" button lower down */
+}
+
